# canvas

./: .env-sample  .gitignore  LICENSE  README.md  dbt_project.yml  package-lock.yml  pyproject.toml
canvas-dbt/models/staging/canvas_data_2/: stg_canvas.yml  stg_canvas_assignment_groups.sql  stg_canvas_assignments.sql  stg_canvas_enrollment_states.sql  stg_canvas_quiz_submissions.sql
canvas_dagster/: pyproject.toml  setup.py
canvas_dagster/canvas_dagster/: assets.py  definitions.py  schedules.py
dagster/: repository.py  workspace.yaml
dagster/common/: assets.py  io_managers.py  resources.py
macros/: retrieve_canvas_records_from_data_lake.sql
models/staging/canvas_data_2/: src_canvas.yml  stg_canvas_accounts.sql  stg_canvas_assignment_override_students.sql  stg_canvas_course_account_associations.sql  stg_canvas_course_sections.sql  stg_canvas_courses.sql  stg_canvas_enrollment_terms.sql  stg_canvas_enrollments.sql  stg_canvas_grading_periods.sql  stg_canvas_pseudonyms.sql  stg_canvas_roles.sql  stg_canvas_scores.sql  stg_canvas_submissions.sql  stg_canvas_users.sql
