[tool.poetry]
name = "canvas"
version = "0.1.0"
description = "Canvas Data 2 Dagster + dbt Code"
authors = ["Marcos Alcozer <marcos@alcozer.dev>", "Zander Stachniak <zander@alcozer.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.10"
dbt-bigquery = "^1.5.1"
dagster-dbt = "0.21.9"
dagster = "1.5.9"
dagster-gcp = "0.21.9"
dagster-k8s = "0.21.9"
google-cloud-storage = "^2.1.0"
tenacity = "^8.0.1"
pydantic = "^2.5.2"
dagster-webserver = "1.5.9"

[tool.poetry.group.dev.dependencies]
sqlfluff = "=2.1.1"
sqlfluff-templater-dbt = "=2.1.1"
black = "^23.3.0"
ruff = "^0.0.269"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    ".sqlfluff",
]

line-length = 88

target-version = "py39"
